# RoseGlassCerataCRM

./: .gitignore  CERATA_CRM.md  CONTRIBUTING.md  LICENSE  PROJECT_TEAM_RECOVERY.md  README.md  demo.py  pyproject.toml  requirements.txt
capabilities/: __init__.py
capabilities/resilience_tools/: __init__.py
config/lenses/: custom_example.yaml  team_recovery_draper.yaml
integrations/: __init__.py
integrations/crawl4ai_hunter/: HUNT_MANIFEST.md  __init__.py  enhanced_web_hunter.py
src/: __init__.py
src/core/: __init__.py  rose_glass_lens.py
src/graveyard/: __init__.py  graveyard_manager.py
src/hunter/: __init__.py  ai_scraper.py  data_hunter.py  web_hunter.py
src/pipeline/: __init__.py  outcome.py  qualifier.py
src/trial/: __init__.py  trial_manager.py
team_recovery/: README.md  __init__.py  add_phone_inquiry.py
tests/: test_cerata_capabilities.py
trials/: README.md  crawl4ai_hunter_trial.py
